@@ -1,6 +1,7 @@
 Revision history for LWP-Protocol-Coro-http
 
 1.12.0  ~~~~-~~-~~
+        - Added support for socks 5/4a/4 proxies.
         - ~~~
 
 1.10.0  2018-02-19
